src/styles/modal.css
.modal-mask {
    opacity: 0;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.205);
    overflow-y: auto;
}

.modal-content {
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translate(-50%, 0);
    background-color: white;
    width: 600px;
    min-height: 350px;
    padding: 30px;
    border-radius: 5px;
    box-shadow: 2px 1px 10px rgba(111, 111, 111, 0.6);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.modal-content--uncentered {
    display: block;
    width: 700px;
    overflow-x: hidden;
}

/* .modal-content__info {
    padding-left: 10px;
} */

.modal-content__title {
    margin: 0;
    word-wrap: break-word;
    margin-bottom: 7px;
}

.modal-content__date {
    color: #A5ADBA;
    font-size: 20px;
}

.comments-container {
    margin-top: 50px;
}

.comments-container__header {
    display: flex;
    justify-content: space-between;
    font-size: 20px;
}

#comment-form {
    display: flex;
    flex-direction: column;
}

#comment-form textarea {
    resize: none;
}

